--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ body {
 main {
   display: grid;
   gap: 3.2rem;
+  animation-name: downTop;
+  animation-duration: 600ms;
 }
 
 .page {
@@ -48,6 +50,9 @@ header {
   font-family: var(--ff-heading);
 
   text-align: center;
+
+  animation-name: topDown;
+  animation-duration: 200ms;
 }
 
 header p {
@@ -70,10 +75,17 @@ header h1 {
   position: relative;
   font-family: var(--ff-heading);
 }
+
 .cards img {
   height: 41.6rem;
   object-fit: cover;
   border-radius: 6px;
+  transition: all 300ms;
+}
+
+.cards img:hover {
+  transform: scale(1.1);
+  opacity: 0.7;
 }
 
 .cards h2 {
@@ -102,4 +114,27 @@ header h1 {
 
   display: inline-flex;
   align-items: center;
+}
+
+@keyframes topDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-50%);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes downTop {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
